Change title and update love letter content
Updated the title and modified the letter content for a more personalized message.

--- a/index.html
+++ b/index.html
@@ -2,25 +2,32 @@
 <html lang="id">
 <head>
     <meta charset="UTF-8">
-    <title>Untuk Kamu ❤️</title>
+    <title>Surat Cinta 💌</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 <div class="container">
-    <div class="envelope" onclick="openLetter()">
-        <div class="top"></div>
+    <div class="envelope" onclick="openEnvelope()">
+        <audio id="bgMusic" loop>
+            <source src="love.mp3" type="audio/mpeg">
+        </audio>
+            
+        <div class="back"></div>
         <div class="letter">
             <h2>💌 Untuk Kamu</h2>
-            <p id="message">
+            <p>
                 Hai sayangku,<br><br>
-                Aku nggak pandai merangkai kata,
-                tapi aku pandai mencintaimu.
-                Terima kasih sudah hadir dan
-                membuat hariku lebih berarti ❤️<br><br>
-                Aku sayang kamu.
+                Terima kasih sudah hadir
+                dan membuat hariku lebih berwarna.
+                Aku mungkin tak sempurna,
+                tapi cintaku untukmu nyata ❤️<br><br>
+                Dengan cinta,<br>
+                Aku
             </p>
         </div>
+        <div class="front"></div>
+        <div class="top-flap"></div>
     </div>
 </div>
 
