--- a/index.html
+++ b/index.html
@@ -430,12 +430,7 @@
 </head>
 <body>
     <!-- Loading overlay -->
-    <div class="loading-overlay" id="loadingOverlay">
-        <div class="loading-content">
-            <h2>💕 Memuat Surat Cinta... 💕</h2>
-            <p>Klik di mana saja untuk melanjutkan</p>
-        </div>
-    </div>
+    <!-- LOADING OVERLAY DIHAPUS - LANGSUNG TAMPIL AMPLOP -->
 
     <!-- Indicator animasi aktif -->
     <div class="animation-test">✨ Animasi Aktif</div>
