--- a/index.html
+++ b/index.html
@@ -463,6 +463,13 @@
     </style>
 </head>
 <body>
+    <!-- Loading overlay -->
+    <!-- LOADING OVERLAY DIHAPUS - LANGSUNG TAMPIL AMPLOP -->
+
+    <!-- Indicator animasi aktif -->
+    <div class="animation-test">✨ Animasi Aktif</div>
+
+    <canvas id="canvas"></canvas>
     
     <!-- Background hearts (BANYAK BANGET!) -->
     <div class="bg-heart" style="top: 10%; left: 10%; animation-delay: 0s; font-size: 40px;">💕</div>
