--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
 
         @keyframes slide-in {
             from { opacity: 0; transform: translateX(-20px); }
-            to { opacity: 1; transform: translateX(0); }
+            to { opacity: 1; transform: translateX(-20px); }
         }
 
         .letter-signature {
