--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
 
         .letter-body p {
             margin-bottom: 18px;
-            animation: slide-in 0.8s ease forwards;
+            animation: none;
             opacity: 0;
         }
 
