--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
         <div class="envelope-wrapper" id="envelopeWrapper">
             <div class="envelope-3d" id="envelope">
                 <div class="envelope-back"></div>
-                <div class="click-text">💌 Klik Untuk Membuka 💌</div>
+                <div class="click-text"></div>
                 <div class="envelope-flap"></div>
                 <div class="letter">
                     <div class="letter-content">
