--- a/index.html
+++ b/index.html
@@ -425,16 +425,25 @@
                     <div class="letter-content">
                         <div class="letter-header">Untuk <span id="letterName">Cintaku</span> ❤️</div>
                         <div class="letter-body">
-                            <p>Hai Sayangku,</p>
-                            <p>Setiap hari bersamamu adalah anugerah terindah dalam hidupku. Kamu adalah alasan di balik senyumku, kekuatan di saat aku lemah, dan cahaya di setiap kegelapan.</p>
-                            <p>Aku mencintaimu bukan karena siapa dirimu, tapi karena siapa diriku saat bersamamu. Kamu membuat aku menjadi versi terbaik dari diriku sendiri.</p>
-                            <p>Setiap momen yang kita habiskan bersama adalah kenangan berharga yang akan selalu kusimpan di hatiku. Dari tawa kita yang tak terbendung hingga keheningan yang nyaman, semuanya sempurna karena bersamamu.</p>
-                            <p>Terima kasih telah menjadi bagian dari hidupku. Aku berjanji akan selalu ada untukmu, dalam suka maupun duka, hari ini dan selamanya.</p>
+                            <p>haii sayanggkuuu😍, cintakuu, maniskuuu, duniakuu, semestakuuu, bidadarikuuuu.
+                                ini adalah love letter pertama dari aku buat kamuu, semoga kamu suka yaaa❤️</p>
+                            <p>di love letter pertama ini aku cuma mau ngungkapin apa yang aku rasain dari awal aku ketemu kamuu sampai saat ini yang posisinya lagi gelisah banget hehehe😁.
+                                aku ga bosen bosen jelasin ke kamu kalau aku tu sudah dari awal ngeliat kamuu udah interestttt bangettt, "karena kenapa tuh bwang?" ya jelas karena kamu itu dari awal sudah
+                                cantikk, pinterr, gemesinn, ceriaa, pokoknya kamu borong semua, ditambah kamu bener bener my type jiakhhh HAAHHAHA😊.</p>
+                            <p>dan sekarang malah muncul perasaan gelisah😢, emang alay sih, cuma gatau kenapa setiap aku ngelihat kamu makin hari makin cantik, makin berkembang, dan aku merasa gelisah 
+                                kalau aku terkesan menghambat kamu gatau kenapa, semakin hari aku ngelihatin kamu pasti selalu terlintas dipikiran aku kalua aku harus cepat cepat sukses dan mencari tujuanku, 
+                                karena aku ngelihat kamu udah punya tujuan sedangkan aku cuma nyari cara buat nyari duit cepet aja wkwk. aku semakin hari semakin takut kehilangan kamu, bener bener takut, gatau ya kenapa, btw mungkin kamu bacanya jadi terkesan cringe hehe😘.</p>
+                            <p>aku emang alay banget ternyata, aku juga baru tau soalnya dulu gak kayak gini, saking alaynya liat story TikTok kamu yang cantikkkkk banget itu aja aku gelisahh hehehe, 
+                                soalnya kalo nanti aku bakal bisa kehilangan kamu suatu hari nanti dan bahkan sebelum aku bisa ketemu kamu dan ngetreat kamu selayaknya pacar aku😔.</p>
+                            <p>ahhhh udahlah, anjir love letter kok malah kayak curhat shibal, malah kayak tweet njir. dan BTW INI GAADA GPT YA😡, dan aku juga mau minta maaf karena semalam aku gabisa kontrol 
+                                emosi aku dan akhirnya berujung merusak suasana nonton film kita, aku bener bener nyesal banget😢, im sorry sayang</p>
+                            <p>intinya sayang, aku benar benar bersyukur banget ada kamu dihidup aku saat ini dan sampai kapanpun itu, cintaku ke kamu gak akan pernah pudar dan aku selalu bertambah, dan aku berharap kamunya juga sama,
+                                dan maaf masih belum Menuhin wishlist yaa, nanti dipenuhin kokk, doain aja aku berhasil, I Love You So Muchhh❤️</p>
                             <p>Aku mencintaimu lebih dari kata-kata yang bisa kuungkapkan. 💕</p>
                         </div>
                         <div class="letter-signature">
-                            Dengan Cinta,<br>
-                            Yang Selalu Menyayangimu 💖
+                            Dengan Cinta, Sulthon<br>
+                            Yang Selalu Sayang kamu Selamanya 💖
                         </div>
                     </div>
                 </div>
