--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
     </div>
 
     <audio id="bgMusic" loop>
-        <source src="https://cdn.pixabay.com/audio/2022/03/10/audio_5506d41ec9.mp3" type="audio/mpeg">
+        <source src="love.mp3" type="audio/mpeg">
     </audio>
 
     <script>
